# pkginfo-rs

./: .drone.yml  .gitignore  Cargo.toml  README.md
src/: arch.rs  errors.rs  lib.rs  license.rs
tests/: acpi_call-dkms.pkg.tar.zst  archey3.pkg.tar.xz  test.rs
