[package]
name = "pkginfo"
description = "Parse Arch linux packages information"
version = "0.1.1"
readme = "README.md"
license-file ="LICENSE"
repository = "https://github.com/JojiiOfficial/pkginfo-rs" 
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"


[dependencies]
tar = "0.4"
zstd = "0.5.3"
xz = "0.1"
