[package]
name = "pkginfo"
description = "Parse Arch linux packages information"
version = "0.1.3"
readme = "README.md"
license-file ="LICENSE"
repository = "https://github.com/JojiiOfficial/pkginfo-rs" 
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"


[dependencies]
tar = "0.4.36"
zstd = "0.5.3"
xz = "0.1.0"
itertools = "0.9.0"
